--- a/src/App.css
+++ b/src/App.css
@@ -9,5 +9,5 @@
   justify-content: center;
   width: 100%;
   min-height: 100vh;
-  background-color: black;
+  background-color: rgb(8, 53, 79);
 }
